--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     <body>
         <div class="container">
             <div class="cardBox">
-                <form action="" method="POST" name="form" onsubmit="return validated()">
+                <form action="" method="POST" name="form" onsubmit="postLogin()">
                     <div class="titulo">
                         <h1 >Acessar</h1>
                     </div>
@@ -24,7 +24,7 @@
                             </label>
                         </div>
                         <div>
-                            <input type="email" name="email" id="email">
+                            <input type="email" name="email" id="email" onblur="validatedEmail(this.value, this.id)">
                         </div>
                     </div>
                     <div class="elements">
@@ -34,11 +34,11 @@
                             </label>
                         </div>
                         <div>
-                            <input type="password" name="password" id="password">
+                            <input type="password" name="password" id="password" onblur="validatedPassword(this.value, this.id)">
                         </div> 
                     </div>
                     <div class="btn">
-                        <button type="submit">ENTRAR</button>
+                        <button type="submit" id="btnStatus">ENTRAR</button>
                     </div>
                 </form>
     
