--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/login.css">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
     <header>
@@ -13,7 +13,7 @@
     <body>
         <div class="container">
             <div class="cardBox">
-                <form action="" method="POST" name="form" onsubmit="postLogin()">
+                <form action="" method="POST" name="form" onsubmit="postLogin()" id="form">
                     <div class="titulo">
                         <h1 >Acessar</h1>
                     </div>
